[5.February 2009]
- tests/test.rb: removed requirement of tests of compiled extensions;
  added requirement of some files returned from SchwerEngine
- tests/testvikingstate.rb: empty TestSuite removed
- freevikings.rb: I found that option -d works with milliseconds,
  but configfile's entry 'frame delay' with seconds - and changed cmdline
  option to accept seconds too.
- framelimitter.rb: unit for automatic frame limitting (and fps computation)
- fvdef.rb: constant defining maximum fps before game behaves strange
- game.rb: added FrameLimitter
- config/structure.conf, config/defaults.conf, config/config.rb,
  game.rb: extended frame delay setup in configuration file
- viking.rb: removed useless 'protected' (only instance methods can be 
  protected)
  removed inclusion of SophisticatedSpriteMixins::Walking
  (I want to change internals of class Viking, but don't want to affect
  e.g. Bear)
- vikingstate2.rb, tests/testvikingstate.rb: preparing replacement 
  for VikingState (VikingState needs to be replaced by something cleaner
  in order to add some missing states)

[3.February 2009]
- docs/user_manual/usermanual.xml, Makefile:
  I updated the User's manual (deleted sections about disabling Rubygems
  and libraries which are distributed as part of Ruby's standard library);
  also deleted unused images and updated one
- levels of campaigns 'Save Ruby' and 'Christmas 2008': exit moved
- initfv.rb: removed debugging output written yesterday to debug
  widget GameUI::Menus::ScrollingCredits

[2.February 2009]
- initfv.rb: ScrollingCredits widget used in the menu (yeah! unlimited space
  for new developers! :) )
- entities/bomb.rb: fall of a dropped bomb stops on a shield
- README.txt: added reference to User's manual; modified (more look than 
  content)

[1.February 2009]
- entities/tombstone.rb: removed funny useless state classes (in 2005 I was
  writing freeVikings and reading book about Design Patterns, but not 