@@ -3,17 +3,8 @@
 
 module FreeVikings
 
-=begin
-= NAME
-Apple
-
-= DESCRIPTION
-Apple is a very simple (({Item})). It contains vitamin C, so it can heal the
-hurted viking (it adds him one energy point if he isn't totally healthy).
-
-= Superclass
-Item
-=end
+  # Apple is a very simple Item. It contains vitamin C, so it can heal the
+  # hurted viking (it adds him one energy point if he isn't totally healthy).
 
   class Apple < Item
 
@@ -22,10 +13,9 @@ Item
     end
 
     def apply(user)
-      if user.respond_to? :heal then
-        return user.heal
+      if user.energy < Viking::MAX_ENERGY then
+        user.heal 1
       end
-      return false
     end
   end # class Apple
 end # module FreeVikings
